[gd_scene load_steps=3 format=3 uid="uid://d8e3lfaeglcx"]

[ext_resource type="Script" path="res://gui/gui.gd" id="1_xmdei"]
[ext_resource type="Texture2D" uid="uid://dwus57414541e" path="res://assets/Icons/01d@2x.png" id="2_kghc5"]

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_xmdei")

[node name="Center" type="Marker2D" parent="."]
position = Vector2(640, 360)

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HP" type="Label" parent="HUD"]
layout_mode = 0
offset_right = 92.0
offset_bottom = 23.0
text = "HP: 100/100"

[node name="Level" type="Label" parent="HUD"]
layout_mode = 0
offset_top = 23.0
offset_right = 40.0
offset_bottom = 46.0
text = "AAA"

[node name="Timer" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "AAAAAAAA"

[node name="Weather" type="HFlowContainer" parent="HUD"]
visible = false
custom_minimum_size = Vector2(100, 20)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_right = -20.0
offset_bottom = 131.0
grow_horizontal = 0
alignment = 1

[node name="Icon" type="TextureRect" parent="HUD/Weather"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_kghc5")

[node name="WeatherText" type="Label" parent="HUD/Weather"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="ErrorMessage" type="RichTextLabel" parent="HUD/Weather"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 100)
layout_mode = 2

[node name="GameOver" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DimScreen" type="ColorRect" parent="GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.152941)

[node name="Label" type="Label" parent="GameOver"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -96.0
offset_right = 120.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="GameOver"]
top_level = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = 24.0
offset_right = 33.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "Restart"

[connection signal="pressed" from="GameOver/RestartButton" to="." method="_on_restart_button_pressed"]
